[gd_scene load_steps=6 format=3 uid="uid://bibc1kfmrm1pe"]

[ext_resource type="Script" uid="uid://bowgfucxvfjhq" path="res://gameplay/levels/level_1.gd" id="1_yp00e"]
[ext_resource type="Texture2D" uid="uid://dja27nwcna1u6" path="res://assets/Road Racers Adrenaline Assets/deserrt.png" id="2_iwapd"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3bkkq"]
texture = ExtResource("2_iwapd")
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
28:1/0 = 0
29:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
28:8/0 = 0
29:8/0 = 0
3:9/0 = 0
4:9/0 = 0
24:9/0 = 0
25:9/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
19:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
25:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
25:17/0 = 0
26:17/0 = 0
27:17/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
25:18/0 = 0
26:18/0 = 0
27:18/0 = 0
7:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
23:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
10:20/0 = 0
11:20/0 = 0
23:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
10:21/0 = 0
11:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
17:21/0 = 0
24:21/0 = 0
25:21/0 = 0
4:22/0 = 0
5:22/0 = 0
10:22/0 = 0
11:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
24:22/0 = 0
25:22/0 = 0

[sub_resource type="TileSet" id="TileSet_3bkkq"]
sources/1 = SubResource("TileSetAtlasSource_iwapd")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_501y7"]
size = Vector2(18, 108)

[node name="Level1" type="Node2D"]
script = ExtResource("1_yp00e")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_yp00e")
format = 2

[node name="Spawnpoint" type="Marker2D" parent="."]
visible = false

[node name="EnemySpawnPoint" type="Marker2D" parent="."]
visible = false
rotation = 1.5707964

[node name="FlagPoints" type="Node2D" parent="."]
visible = false

[node name="Flag1" type="Area2D" parent="FlagPoints"]
metadata/token = "fp1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlagPoints/Flag1"]
shape = SubResource("RectangleShape2D_501y7")
metadata/_edit_lock_ = true

[node name="Flag2" type="Area2D" parent="FlagPoints"]
metadata/token = "fp2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlagPoints/Flag2"]
shape = SubResource("RectangleShape2D_501y7")

[node name="Flag3" type="Area2D" parent="FlagPoints"]
metadata/token = "fp2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlagPoints/Flag3"]
shape = SubResource("RectangleShape2D_501y7")

[node name="LapFlag" type="Area2D" parent="FlagPoints"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlagPoints/LapFlag"]
shape = SubResource("RectangleShape2D_501y7")
metadata/_edit_lock_ = true

[node name="EnemyCheckpoints" type="Node2D" parent="."]
visible = false

[node name="CP1" type="Marker2D" parent="EnemyCheckpoints"]

[node name="CP2" type="Marker2D" parent="EnemyCheckpoints"]

[node name="CP3" type="Marker2D" parent="EnemyCheckpoints"]

[node name="CP4" type="Marker2D" parent="EnemyCheckpoints"]

[node name="CP5" type="Marker2D" parent="EnemyCheckpoints"]

[node name="debugCamera" type="Camera2D" parent="."]
visible = false
position = Vector2(2288, 940)
enabled = false
zoom = Vector2(4, 4)

[connection signal="body_entered" from="FlagPoints/Flag1" to="." method="_on_flag_1_body_entered"]
[connection signal="body_entered" from="FlagPoints/Flag2" to="." method="_on_flag_2_body_entered"]
[connection signal="body_entered" from="FlagPoints/Flag3" to="." method="_on_flag_3_body_entered"]
[connection signal="body_entered" from="FlagPoints/LapFlag" to="." method="_on_lap_flag_body_entered"]
